--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,7 +11,8 @@
 #   - dist/**/*.js
 #
 src_files:
-  - assets/javascripts/application.js
+  - jquery-*.js
+  - application-*.js
 
 # stylesheets
 #
@@ -63,7 +64,7 @@ spec_files:
 # src_dir: public
 #
 src_dir: 
-  - app
+  - public/assets
 
 # spec_dir
 #
